fix(extend game animation): z-index of extended game menu has been increased to pass over the nav bar and contact component

--- a/src/frontend/static/style/components/Contacts/BottomNavContact.css
+++ b/src/frontend/static/style/components/Contacts/BottomNavContact.css
@@ -7,7 +7,7 @@
     right: 0;
     margin-right: 2.5rem;
     margin-bottom: 1rem;
-    z-index: 3;
+    z-index: 2;
 }
 
 .bottom-nav-contacts p {
